<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/trackingFragment">

    <fragment
        android:id="@+id/trackingFragment"
        android:name="com.roulette.tracker.ui.tracking.TrackingFragment"
        android:label="@string/tracking">
        <action
            android:id="@+id/action_tracking_to_stats"
            app:destination="@id/statsFragment">
            <argument
                android:name="sessionId"
                app:argType="long" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/statsFragment"
        android:name="com.roulette.tracker.ui.stats.StatsFragment"
        android:label="@string/stats">
        <argument
            android:name="sessionId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.roulette.tracker.ui.settings.SettingsFragment"
        android:label="@string/settings" />

</navigation> 